# aura

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECHTURE.md  ARCHITECTURE.md  AUDIT_RESULTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COLLABORATORS.md  CONTRIBUTING.md  DEPLOY.md  DEPLOYMENT.md  DISCLAIMER.md  ENVIRONMENT.md  GEMINI.md  GOVERNANCE.md  ICP.md  LEGAL.md  LICENSE  LICENSE.md  MARKETING.md  Makefile  NEXT_STEPS.md  PHILOSOPHY.md  PRD.md  PRODUCTION_READINESS_CERBERUS_PEGASUS.md  README.md  README_AGENTS.md  SECURITY.md  SOVEREIGN_SHIELD_MANIFESTO.md  STACK.md  SUPPORT.md  TASKS.md  TESTING_GUIDE.md  ULAVAL_ONBOARDING_SUMMARY.md  VPS_DEPLOYMENT.md  VPS_READY.md  aura  aura.cmd  (+23 more)
.github/: pull_request_template.md
.serena/: project.yml
Aura/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json
ai_agency_wealth/: accounting_dept.py  algeria_smb_dept.py  automation_master.sh  automation_master_docker.sh  autopilot.sh  crypto_controller.py  emergency_agency.py  generate_offer.py  global_newsletter_dept.py  health_dept.py  init_crm.py  latest_newsletter.md  lead_gen_dept.py  live_test_payment.py  llm_engineering_dept.py  log_watchdog.py  main.py  monitor.sh  n8n_micro_saas_fulfillment.json  nomad_ops_dept.py  outreach_engine.py  prod_payment_server.py  requirements.txt  run_1_hour.sh  run_agency.sh  run_agent1.sh  (+2 more)
openclaw-tui/: Cargo.toml  DEPRECATED.md  config.example.toml  install.sh
openclaw-tui/src/: app.rs  config.rs  main.rs  ssh.rs
openclaw-tui/src/ui/: costs.rs  dashboard.rs  help.rs  hitl.rs  logs.rs  mod.rs
(+1357 files in other folders)
